--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/documents/main.css">
     <title>Document</title>
 </head>
 <body>
+   <nav class="top-nav">
     
+     <h3 class="site-brand">Grammify</h3>
+     <ul class="nav-components">
+        <li>About Us</li>
+        <li>Pricing Plans</li>
+        <li>contact Us</li>
+        <li>Sign Up</li>
+     </ul> 
+    
+</nav> 
 </body>
 </html>
